Fixing layout issues with FlexBox in IE (not fully completed)

--- a/src/app/servers-environment/servers-environment.component.scss
+++ b/src/app/servers-environment/servers-environment.component.scss
@@ -5,12 +5,6 @@
   flex-grow: 1;
 }
 
-.outer .container {
-  background: blue;
-  //min-width: fit-content;
-  //min-height: fit-content;
-}
-
 .outer {
   background-color: red;
   overflow: auto;
